[gd_scene load_steps=19 format=3 uid="uid://rbj80erdhio0"]

[ext_resource type="Script" uid="uid://dvnlesq27crhi" path="res://scripts/entity/player/player.gd" id="1_rxeow"]
[ext_resource type="Script" uid="uid://c1xg1rlrg1oi8" path="res://scripts/components/stats/player_stats.gd" id="2_7rkla"]
[ext_resource type="Texture2D" uid="uid://b4xc2hjastnxd" path="res://assests/sprites/entity/player/block_character.png" id="3_31lws"]
[ext_resource type="Script" uid="uid://d2a4jyq6tbavf" path="res://scripts/entity/player/graphics.gd" id="3_513h3"]
[ext_resource type="PackedScene" uid="uid://cov7wcfpuohaa" path="res://scenes/player/hand.tscn" id="5_q4th5"]
[ext_resource type="Script" uid="uid://h1l4xvgb1igq" path="res://scripts/components/entity/hurtbox.gd" id="5_qpnn2"]
[ext_resource type="Script" uid="uid://bj0y7lufclwdk" path="res://scripts/entity/player/item_detector.gd" id="7_dwnhr"]
[ext_resource type="Script" uid="uid://c873jx0bhbj56" path="res://scripts/components/entity/hit_popup_spawner.gd" id="7_fm06x"]
[ext_resource type="Script" uid="uid://brnbdwuanqafv" path="res://scripts/components/entity/regeneration_counter.gd" id="9_jo4e4"]

[sub_resource type="Resource" id="Resource_jo4e4"]
script = ExtResource("2_7rkla")
max_hp = 100
hp_regeneration = 2
attack_speed_percent = 100
movement_speed = 100
metadata/_custom_type_script = "uid://c1xg1rlrg1oi8"

[sub_resource type="Animation" id="Animation_tlyoj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_35tm1"]
resource_name = "new_animation"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_wb6bs"]
resource_name = "walk_right"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["look_left"],
"method": &"change_hands_ordering"
}]
}

[sub_resource type="Animation" id="Animation_5f20b"]
resource_name = "walk"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Graphics")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["look_right"],
"method": &"change_hands_ordering"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8vjb"]
_data = {
&"RESET": SubResource("Animation_tlyoj"),
&"death": SubResource("Animation_35tm1"),
&"look_left": SubResource("Animation_wb6bs"),
&"look_right": SubResource("Animation_5f20b")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5anm6"]
radius = 7.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tpnvk"]
radius = 7.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7ao3o"]
radius = 7.0
height = 14.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 17
script = ExtResource("1_rxeow")
stats = SubResource("Resource_jo4e4")

[node name="Graphics" type="Node2D" parent="."]
script = ExtResource("3_513h3")

[node name="Body" type="Sprite2D" parent="Graphics"]
z_index = 1
position = Vector2(0, -7)
texture = ExtResource("3_31lws")
hframes = 8
vframes = 2

[node name="LeftHand" parent="Graphics" instance=ExtResource("5_q4th5")]
position = Vector2(0, -2)

[node name="RightHand" parent="Graphics" instance=ExtResource("5_q4th5")]
z_index = 0
position = Vector2(-4, -2)

[node name="Head" type="Node2D" parent="Graphics"]
visible = false

[node name="Chest" type="Node2D" parent="Graphics"]
visible = false

[node name="Boots" type="Node2D" parent="Graphics"]
visible = false

[node name="LeftAccessory" type="Node2D" parent="Graphics"]
visible = false

[node name="RightAccessory" type="Node2D" parent="Graphics"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n8vjb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_5anm6")
debug_color = Color(0.95686275, 0.078431375, 0.4862745, 0.7490196)

[node name="ItemDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
script = ExtResource("7_dwnhr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemDetector"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_tpnvk")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false
script = ExtResource("5_qpnn2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_7ao3o")

[node name="HitPopupSpawner" type="Node2D" parent="."]
script = ExtResource("7_fm06x")

[node name="RegenerationCounter" type="Node" parent="."]
script = ExtResource("9_jo4e4")
metadata/_custom_type_script = "uid://brnbdwuanqafv"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="ItemDetector" to="ItemDetector" method="_on_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="received_damage" from="HurtBox" to="." method="_on_hurt_box_received_damage"]
